working on theme styling

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -5,7 +5,7 @@ $theme-image-path: "~uswds/src/img";
 $theme-respect-user-font-size: false;
 $theme-root-font-size: 14px;
 $theme-font-path: "~uswds/src/fonts";
-$theme-font-type-sans: "public-sans";
+$theme-font-type-sans: "source-sans-pro";
 $theme-style-body-element: true;
 
 /* SPACING */
@@ -13,3 +13,10 @@ $theme-grid-container-max-width: "desktop-lg";
 
 /* COMPONENTS */
 $theme-hero-image: "~uswds/src/img/hero.png";
+
+$theme-text-color: "accent-cool-darker";
+$theme-link-color: "accent-cool";
+$theme-link-visited-color: "violet-50v";
+$theme-input-tile-border-color: "accent-cool";
+$theme-border-color: "accent-cool";
+
