--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,8 @@
 @import '~uswds/src/stylesheets/theme/_uswds-theme-color.scss';
 @import '~uswds/src/stylesheets/theme/_uswds-theme-utilities.scss';
 
+@import './app.scss';
+
 @import './settings.scss';
 
 @import '~uswds/src/stylesheets/packages/_required.scss';
