--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -15,7 +15,7 @@ $theme-grid-container-max-width: "desktop-lg";
 $theme-hero-image: "~uswds/src/img/hero.png";
 
 $theme-text-color: "accent-cool-darker";
-$theme-link-color: "accent-cool";
+$theme-link-color: "accent-cool-darker";
 $theme-link-hover-color: "violet-40v";
 $theme-link-visited-color: "violet-40v";
 $theme-body-font-size: "md";
