--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,5 +1,10 @@
 /* GENERAL */
 $theme-image-path: "~uswds/src/img";
+$theme-color-primary: "cyan-30v";
+$theme-color-primary-dark: "blue-cool-40v";
+$theme-color-primary-darker: "blue-cool-60v";
+$theme-color-primary-light: "blue-cool-20v";
+$theme-color-primary-lighter: "blue-cool-5v";
 
 /* TYPOGRAPHY */
 $theme-respect-user-font-size: false;
