language buttons and menu button styling

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,3 +10,11 @@ main {
 #footer {
   margin-top: -200px;
 }
+
+#NavMenuButtonContainer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+
