fixed scss issue - need to use hex code not uswds design token

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,10 +1,8 @@
-$mainBackgroundColor: #e1f3f8;
-// @import './settings.scss';
+@import './settings.scss';
 
 main {
   padding-bottom: 250px;
-  // background-color: $theme-color-primary-light;
-  background-color: $mainBackgroundColor;
+  background-color: $background-color;
 }
 
 #footer {
