--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -24,3 +24,5 @@ $theme-link-color: "accent-cool-darker";
 $theme-link-hover-color: "violet-40v";
 $theme-link-visited-color: "violet-40v";
 $theme-body-font-size: "md";
+
+$background-color: #e1f3f8;
