routing and styling

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,8 +1,6 @@
-@import './settings.scss';
-
 main {
   padding-bottom: 250px;
-  background-color: $background-color;
+  background-color: $theme-color-primary-light;
 }
 
 #footer {
