--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,13 @@
-@import '~uswds/src/stylesheets/theme/_uswds-theme-general.scss';
-@import '~uswds/src/stylesheets/theme/_uswds-theme-typography.scss';
-@import '~uswds/src/stylesheets/theme/_uswds-theme-spacing.scss';
-@import '~uswds/src/stylesheets/theme/_uswds-theme-color.scss';
-@import '~uswds/src/stylesheets/theme/_uswds-theme-utilities.scss';
+@import "~uswds/src/stylesheets/theme/_uswds-theme-general.scss";
+@import "~uswds/src/stylesheets/theme/_uswds-theme-typography.scss";
+@import "~uswds/src/stylesheets/theme/_uswds-theme-spacing.scss";
+@import "~uswds/src/stylesheets/theme/_uswds-theme-color.scss";
+@import "~uswds/src/stylesheets/theme/_uswds-theme-utilities.scss";
 
-@import './app.scss';
+@import "./settings.scss";
 
-@import './settings.scss';
+@import "./app.scss";
 
-@import '~uswds/src/stylesheets/packages/_required.scss';
+@import "~uswds/src/stylesheets/packages/_required.scss";
 
-@import 'uswds';
+@import "uswds";
